<resources>
    <string name="app_name">VPDMoney Assessment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_back">Welcome Back👋🏼</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_to_setup_biometrics">Click to setup Fingerprint</string>
    <string name="login">Login</string>
    <string name="are_you_a_new_user">Are you a new user? </string>
    <string name="_19861">*****19861</string>
    <string name="n500_000">N500,000</string>
    <string name="ademola_john">Ademola John</string>
    <string name="list_of_accounts">List of Accounts</string>
    <string name="arrow_back">Arrow Back</string>
    <string name="transfer_funds">Transfer Funds</string>
    <string name="daily_transfer_limit">Daily Transfer Limit: </string>
    <string name="change_limit">Change Limit</string>
    <string name="account_number">ACCOUNT NUMBER</string>
    <string name="amount">₦ 0.00</string>
    <string name="amount_text">AMOUNT</string>
    <string name="bal_n1_000_000">Bal: ₦ 0</string>
    <string name="n100_000">₦ 100,000</string>
    <string name="enter_a_remark">Enter a remark</string>
    <string name="remark">REMARK</string>
    <string name="min_of_3_characters">Min of 3 characters</string>
    <string name="save_as_beneficiary">Save as beneficiary</string>
    <string name="continue_">Continue</string>
    <string name="transaction_summary">Transaction Summary</string>
    <string name="nav_back">Nav Back</string>
    <string name="_9861">******9861</string>
    <string name="_10_00">₦ 10.00</string>
    <string name="transaction_fee">TRANSACTION FEE</string>
    <string name="enjoy_your_birthday">Enjoy your Birthday</string>
    <string name="confirm">Confirm</string>
    <string name="hello">Hello</string>
    <string name="johnson">Johnson,</string>
    <string name="total_balance">Total Balance</string>
    <string name="naira_symbol">₦</string>
    <string name="n34_950"> 34,950</string>
    <string name="card_number">****   ****   ****  ****</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="transaction_item_icon">Transaction Item icon</string>
    <string name="sent_to_john_oluwafemi">Sent to John Oluwafemi</string>
    <string name="_2_20_22">2/20/22</string>
    <string name="_65000">+65000</string>
    <string name="_7_35pm">7:35pm</string>
    <string name="swipe_indicator">swipe indicator</string>
    <string name="transfer">Transfer</string>
    <string name="saved_accounts">Saved Accounts</string>
    <string name="dashboard">Dashboard</string>
    <string name="accounts">Accounts</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="create_account">Create Account</string>
    <string name="have_an_existing_account">Have an Existing Account?</string>
    <string name="create_your_account">Create your Account</string>
    <string name="oa">OA</string>
    <string name="vm">VM</string>
    <string name="destination_account">DESTINATION ACCOUNT</string>
    <string name="account_number_hint">Account Number</string>
    <string name="invalid_source_acct">Please, Enter a valid source account</string>
    <string name="invalid_dest_acct">Please, Enter a valid destination account</string>
    <string name="insufficient_funds">Insufficient funds</string>
    <string name="after_text">"AFTER TEXT: "</string>
    <string name="before_text">"BEFORE_TEXT: "</string>
    <string name="source_account">SOURCE ACCOUNT</string>
    <string name="vpd_money">VPD Money</string>
</resources>