<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.login.LoginFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="28dp"
        android:theme="@style/General.Text.Style"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/welcome_back"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:textAlignment="textStart"
            android:text="@string/email"
            android:theme="@style/General.Text.Style"
            android:textSize="20sp"
            android:layout_height="24dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:background="@color/light_blue"
                android:hint="@string/enter_your_email"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:textAlignment="textStart"
            android:text="@string/password"
            android:theme="@style/General.Text.Style"
            android:textSize="20sp"
            android:layout_height="24dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:background="@color/light_blue"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:clickable="true"
        android:focusable="true"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_height="0dp">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/click_to_setup_biometrics"
            android:focusable="true"
            android:src="@drawable/ic_fingerprint"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:theme="@style/General.Text.Style"
            android:layout_height="wrap_content"
            android:text="@string/click_to_setup_biometrics"
            android:textSize="14sp"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/login_button"
            app:cornerRadius="10dp"
            android:text="@string/login"
            android:layout_height="56dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:theme="@style/General.Text.Style"
            android:clickable="true"
            android:layout_gravity="center_horizontal"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:text="@string/are_you_a_new_user_create_your_account"
            android:textSize="14sp"/>
    </LinearLayout>
        


</LinearLayout>