<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginBottom="14dp"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        tools:context=".presentation.dashboard.DashboardFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/arrow_back"
                android:src="@drawable/ic_electricity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                app:layout_constraintBaseline_toBaselineOf="@id/profile_picture"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/profile_picture"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello"
                    android:textColor="@color/navy_blue"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/johnson"
                    android:textSize="21sp"
                    android:theme="@style/General.Text.Style" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/navy_blue"
            android:padding="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_balance"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/total_balance_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:gravity="top|start"
                        android:text="@string/naira_symbol"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/total_acct_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="59dp"
                        android:gravity="center"
                        android:text="@string/n34_950"
                        android:textColor="@color/white"
                        android:textSize="29sp"
                        android:theme="@style/General.Text.Style" />
                </LinearLayout>

                <TextView
                    android:id="@+id/card_number"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:gravity="center"
                    android:text="@string/card_number"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/swipe_indicator"
                    android:src="@drawable/swipe" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:id="@+id/transfer_button"
                android:clickable="true"
                android:focusable="true"
                app:chipIcon="@drawable/ic_transfer"
                app:chipBackgroundColor="@color/light_blue"
                app:chipStrokeColor="@color/navy_blue"
                android:layout_height="48dp"
                android:text="@string/transfer"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:id="@+id/accounts_button"
                android:layout_marginStart="15dp"
                android:clickable="true"
                android:focusable="true"
                app:chipBackgroundColor="@color/light_blue"
                app:chipStrokeColor="@color/navy_blue"
                android:text="@string/accounts"
                app:chipIcon="@drawable/ic_account_management"
                android:layout_height="48dp"
                android:contentDescription="@string/transaction_item_icon"
                android:src="@drawable/ic_sent"/>
        </LinearLayout>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="25dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/transaction_list_progress"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/transaction_title"
                app:layout_constraintStart_toStartOf="@id/dashboard_recycler_view"
                android:layout_marginTop="20dp"
                android:text="@string/recent_transactions"
                android:textSize="13sp"
                android:theme="@style/General.Text.Style" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dashboard_recycler_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/transaction_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/transact_history_list_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>
