<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginTop="5dp"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginBottom="5dp"
    android:layout_height="76dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/initials"
            android:layout_margin="10dp"
            android:background="@drawable/ic_account_icon"
            android:text="@string/oa"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/account_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/General.Text.Style"
                android:textSize="14sp"
                android:text="@string/ademola_john" />
            <TextView
                android:id="@+id/account_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:text="@string/_19861" />
        </LinearLayout>

        <TextView
            android:id="@+id/account_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n500_000"
            android:textSize="12sp"
            android:layout_margin="@dimen/text_margin"
            android:theme="@style/General.Text.Style"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>