<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.summary.TransactionSummaryFragment">

    <LinearLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/summary_nav_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:contentDescription="@string/arrow_back"
            android:focusable="true"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/transaction_summary"
            android:textSize="20sp"
            android:theme="@style/General.Text.Style" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="true"
        android:scrollbarSize="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:gravity="center"
                    android:text="@string/source_account"
                    android:textColor="@color/navy_blue"
                    android:textSize="14sp"
                    android:theme="@style/General.Text.Style" />

                <TextView
                    android:id="@+id/src_acct_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/_9861"
                    android:textSize="16sp"
                    android:theme="@style/General.Text.Style" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/source_acct_name"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:text="@string/ademola_john"
                    app:chipBackgroundColor="#BCD2E8"
                    app:chipIcon="@drawable/ic_validate_icon"
                    app:chipStrokeColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:gravity="center"
                    android:text="@string/destination_account"
                    android:textColor="@color/navy_blue"
                    android:textSize="14sp"
                    android:theme="@style/General.Text.Style" />

                <TextView
                    android:id="@+id/receiver_acct_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/_9861"
                    android:textSize="16sp"
                    android:theme="@style/General.Text.Style" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/receiver_acct_name"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:text="@string/ademola_john"
                    app:chipBackgroundColor="#BCD2E8"
                    app:chipIcon="@drawable/ic_validate_icon"
                    app:chipStrokeColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:gravity="center"
                    android:text="@string/amount_text"
                    android:textColor="@color/navy_blue"
                    android:textSize="14sp"
                    android:theme="@style/General.Text.Style" />

                <TextView
                    android:id="@+id/summary_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/n100_000"
                    android:textSize="16sp"
                    android:theme="@style/General.Text.Style" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:gravity="center"
                    android:text="@string/remark"
                    android:textColor="@color/navy_blue"
                    android:textSize="14sp"
                    android:theme="@style/General.Text.Style" />

                <TextView
                    android:id="@+id/summary_remark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/enjoy_your_birthday"
                    android:textSize="16sp"
                    android:theme="@style/General.Text.Style" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save_as_beneficiary"
                    tools:ignore="NestedWeights" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/summary_beneficiary_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="25dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:id="@+id/confirm_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/navy_blue"
                    android:clickable="true"
                    android:focusable="true"
                    android:longClickable="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/confirm"
                        android:textColor="@color/white"
                        android:theme="@style/General.Text.Style" />

                    <ProgressBar
                        android:id="@+id/confirm_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:indeterminateTint="@color/white"
                        android:visibility="gone" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>